--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-
+<html>
 
 <head>
-  <title> Keting Zhou </title>
-  <link href="styles/style.css" rel="stylesheet" type="text/css">
+
+ <meta charset="utf-8">
+
+ <title> Keting Zhou </title>
+ <link href="styles/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
 
 <body>
+
   <h1> Apple: The Profitable Fruit </h1>
 
   <p> If you bought apple stock a long time ago you're probably rich. That's because it went up really fast! See for yourself in the chart below. </p>
@@ -20,6 +23,7 @@
   <!-- Run JavaScript scripts in the body -->
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script src="scripts/main.js"></script>
+
 </body>
 
 </html>
